# photofinish

./: .gitignore  .licenserc.yaml  .photofinish.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.adoc  README.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  release-binary.yml  rust.yml
src/: config.rs  list.rs  main.rs  run.rs
src/runner/: config.rs  mod.rs
src/web/: handlers.rs  mod.rs
web/frontend/: package-lock.json  package.json
