[package]
name = "photofinish"
version = "1.3.0"
edition = "2021"

[dependencies]
toml = "0.5"
clap = {version = "3.0.7", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
exitcode = "1.1.2"
